[gd_scene load_steps=2 format=3 uid="uid://dgofnl36mnvu4"]

[ext_resource type="Script" path="res://Scenes/EnemyStateMachine/charge_state.gd" id="1_yfb2b"]

[node name="ChargeState" type="Node"]
script = ExtResource("1_yfb2b")

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout"]
